--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,7 +18,6 @@ bind r source-file ~/.tmux.conf
 # Start numbering at 1
 set -g base-index 1
 
-
 # Cht.sh
 bind-key -r i run-shell "tmux neww ~/bin/tmux-cht.sh"
 
@@ -35,6 +34,9 @@ bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
 bind -r h resize-pane -L 5
 bind -r m resize-pane -Z
+
+# Pane highlight
+# set-option -g pane-active-border-style fg=blue
 
 set -g mouse on
 
