--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,9 @@ bind r source-file ~/.tmux.conf
 # Start numbering at 1
 set -g base-index 1
 
+# For nvim integration
+set-option -g focus-events on
+
 # Cht.sh
 bind-key -r i run-shell "tmux neww ~/bin/tmux-cht.sh"
 
