Update tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,8 @@
 set -g default-terminal "screen-256color"
 
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ',xterm-256color:Tc'
+
 # Set prefix
 set -g prefix C-a
 unbind C-b
@@ -25,7 +28,7 @@ set-option -g focus-events on
 bind-key -r i run-shell "tmux neww ~/bin/tmux-cht.sh"
 
 # Sessionizer
-bind-key -r f run-shell "tmux neww ~/bin/tmux-sessionizer"
+# bind-key -r f run-shell "tmux neww ~/bin/tmux-sessionizer"
 
 # Kill session and go to next
 set-option -g detach-on-destroy off
@@ -58,8 +61,8 @@ set -g @plugin 'tmux-plugins/tpm'
 # list of tmux plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'arcticicestudio/nord-tmux'
-set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
-set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
+# set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
+# set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @prefix_highlight_prefix_prompt ' Wait '
@@ -70,8 +73,8 @@ set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow,bold' # default is '
 set -g @prefix_highlight_show_sync_mode 'on'
 set -g @prefix_highlight_sync_mode_attr 'fg=black,bg=green' # default is 'fg=default,bg=yellow'
 
-set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'on'
+# set -g @resurrect-capture-pane-contents 'on'
+# set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
