--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
 set -g default-terminal "screen-256color"
+new-session -c ~/src
 
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ',xterm-256color:Tc'
