--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,11 @@ bind - split-window -v
 unbind r
 bind r source-file ~/.tmux.conf
 
+# Enable OSC 52 clipboard
+set -g set-clipboard on
+# set -g allow-passthrough on
+set -ag terminal-overrides "vte*:XT:Ms=\\E]52;c;%p2%s\\7,xterm*:XT:Ms=\\E]52;c;%p2%s\\7"
+
 # Start numbering at 1
 set -g base-index 1
 
@@ -26,7 +31,7 @@ set -g base-index 1
 set-option -g focus-events on
 
 # Cht.sh
-bind-key -r i run-shell "tmux neww ~/bin/tmux-cht.sh"
+# bind-key -r i run-shell "tmux neww ~/bin/tmux-cht.sh"
 
 # Sessionizer
 # bind-key -r f run-shell "tmux neww ~/bin/tmux-sessionizer"
